--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,2 +1,8 @@
-<h1>People Tracker</h1>
-{{outlet}}
+<div class="container-fluid">
+    <h1>Text editor</h1>
+    <textarea></textarea>
+    <a download="bb.png" href="">
+      download
+    </a>
+    <!-- {{ outlet }}-->
+</div>
